# mic2e-agent

./: Dockerfile  REDIS_CONNECTION.md  main.py  pyproject.toml  test.py
app/: env.py  lifespan.py  main.py
app/clients/: inference_client.py  redis_client.py  storage_client.py
app/core/chat2edit/: __init__.py  context_value_wrapper.py  mic2e_context_provider.py  mic2e_context_strategy.py  mic2e_exemplars.py  mic2e_feedbacks.py  mic2e_prompting_strategy.py
app/core/chat2edit/functions/: __init__.py  apply_filter.py  detect_objects.py  flip_entities.py  generate_object.py  generate_objects.py  paste_entities.py  replace_entities.py  rotate_entities.py  scale_entities.py  segment_object.py  segment_objects.py  shift_entities.py
app/core/chat2edit/models/: image.py  object.py  referent.py
app/core/chat2edit/utils/: __init__.py  image_utils.py  inpaint_utils.py  object_utils.py  scribble_utils.py
app/dependencies/: chat2edit_dependencies.py  redis_dependencies.py
app/routes/: chat2edit_routes.py
app/schemas/: chat2edit_schemas.py
app/services/: chat2edit_service.py
app/services/impl/: chat2edit_service_impl.py
app/utils/: image_utils.py
